# struct-to-json-db

./: Cargo.toml  README.md
lib/struct-to-json-db-macro/: Cargo.toml
lib/struct-to-json-db-macro/src/: lib.rs
src/: lib.rs
